--- a/ClassLibraryEmloyees/ClassLibraryEmloyees.csproj
+++ b/ClassLibraryEmloyees/ClassLibraryEmloyees.csproj
@@ -41,8 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Employee.cs" />
+    <Compile Include="Controller.cs" />
+    <Compile Include="Director.cs" />
+    <Compile Include="HeadOfDivision.cs" />
+    <Compile Include="ITitlable.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rabochiy.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
