--- a/ClassLibraryEmloyees/ClassLibraryEmployees.csproj
+++ b/ClassLibraryEmloyees/ClassLibraryEmployees.csproj
@@ -41,13 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller.cs" />
-    <Compile Include="Director.cs" />
-    <Compile Include="HeadOfDivision.cs" />
+    <Compile Include="Employees\Controller.cs" />
+    <Compile Include="Employees\Director.cs" />
+    <Compile Include="Employees\HeadOfDivision.cs" />
     <Compile Include="ITitlable.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rabochiy.cs" />
+    <Compile Include="Employees\Rabochiy.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
