class Transfer replace all other classes like director rabochiy and so on.

--- a/ClassLibraryEmloyees/ClassLibraryEmployees.csproj
+++ b/ClassLibraryEmloyees/ClassLibraryEmployees.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Employees\Rabochiy.cs" />
+    <Compile Include="Transfer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
