--- a/ClassLibEmployees/ClassLibEmployees.csproj
+++ b/ClassLibEmployees/ClassLibEmployees.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C52008F3-5A13-404C-BC02-023D037B28CE}</ProjectGuid>
+    <ProjectGuid>{76772B10-20B2-468C-9742-A53322DAD5D5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibraryEmloyees</RootNamespace>
-    <AssemblyName>ClassLibraryEmloyees</AssemblyName>
+    <RootNamespace>ClassLibEmployees</RootNamespace>
+    <AssemblyName>ClassLibEmployees</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -45,10 +45,10 @@
     <Compile Include="Employees\Controller.cs" />
     <Compile Include="Employees\Director.cs" />
     <Compile Include="Employees\HeadOfDivision.cs" />
+    <Compile Include="Employees\Rabochiy.cs" />
     <Compile Include="ITitlable.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Employees\Rabochiy.cs" />
     <Compile Include="Transfer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
